# Surimi-desktop-app

./: .gitignore  README.md  package.json
Surimi/: README.md  package-lock.json  package.json  vite.config.js
Surimi/src/: App.vue
Surimi/src-tauri/: Cargo.toml  tauri.conf.json
Surimi/src-tauri/icons/: icon.icns
Surimi/src-tauri/src/: main.rs
Surimi/src-tauri/src/file_integrity/: file_listing.rs  hash.rs
Surimi/src/assets/: base.css
SurimiV2/: package-lock.json
SurimiV2/src-tauri/: Cargo.toml
SurimiV2/src-tauri/src/: main.rs
SurimiV2/src-tauri/src/file_integrity/: json.rs
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/file_integrity/: file_listing.rs
