[package]
name = "surimiv2"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
my_logger = "0.2.1"
tokio = "1.35.0"
chrono = "0.4.31"
walkdir ="2.4.0"
md-5 = "0.10.6"
tempfile = "3.8.1"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
